# smart-wsi-scanner

./: .gitignore  .gitmodules  ARCHITECTURE.md  BIT_DEPTH_ANALYSIS_REPORT.md  BIT_DEPTH_FIX_SUMMARY.md  CAMM.yml  QUICKSTART.md  README.md  SHG Pycromanager input test.ipynb  demo2.ipynb  diagnose_bit_depth.py  diagnose_cvtcolor_issue.py  env.yml  final_rotation_fix.py  main.ipynb  main_20231005.ipynb  minimal_qupathrunner.ipynb  minimal_qupathrunner.py  minimal_qupathrunner_v2.py  moveStageToCoordinates.py  ppm_rotation_sensitivity_test.py  pyproject.toml  rotation_fix.py  run_gui.py  schema.yml  schema_CAMM.yml  smartpath.ipynb  smartpath.py  smartpath.txt  smartpath_config.py  smartpath_configload.py  smartpath_configloader.py  smartpath_qpscope.py  smartpath_using_configs.ipynb  swap_objective_lens.py  test.txt  test.yml  test2.txt  test_adaptive_exposure_simple.py  test_cycle_logic.py  (+9 more)
StitchTest/: project.qpproj  project.qpproj.backup
StitchTest/classifiers/: classes.json
StitchTest/scripts/: StitchingByTextFile.groovy
Transfer qp scope/: save4xMacroTiling.groovy
config/: config_CAMM.yml
qp_commands/: 4x_bf_scan_pycromanager.py  swap_objective_lens.py
qupath-scripts/: export-ometif.groovy  export-rectangular-tiling-coordinates-20x-and-MP.groovy
smart_wsi_scanner/: __init__.py  config.py  hardware.py  smartpath.py
smart_wsi_scanner/tests/: test_config.py  test_hardware.py  test_smartpath.py
smartpath_libraries/: sp_acquisition.py  sp_stitcher.py
src/: __init__.py  minimal_qupathrunner_v2.py  minimal_qupathrunner_v3.py  qp_stage.py  smartpath_qpscope.py  toggle_sp_cli.ps1
src/debeyering/: 20250613_debeyering.ipynb  20250624_debeyering.ipynb  log.txt
src/dev/: 20250613_debeyering.ipynb  20250701_debeyering.ipynb  20250724_log_from_QuPath.txt  20250724_log_from_QuPath_full.txt  20250815_compare_jai_Mp6.ipynb  basic_usage.ipynb  check_exposure.ipynb  check_fov.ipynb  colors_for_ppm.ipynb  parameters_JAi.ipynb  qp_whitebalance.py  test_kin.py  test_pycromanager_calls.ipynb  test_pycromanager_displaytomm2.ipynb  test_whitebalancing.ipynb  versions-pmm.txt  (+1 more)
src/dev_tests/: TISSUE_DETECTION_TUNING.md  (+13 more)
test_locations/: 20x_grid_locs.pos  TileConfiguration2.txt  TileConfiguration_QP.txt
(+88 files in other folders)
