[project]
name = "smart-wsi-scanner"
version = "2.0.0"
description = "A smart whole slide image scanner with hardware abstraction and configuration management"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Mike Nelson", email = "msnelson8@wisc.edu" },
    { name = "Bin Li", email = "bli346@wisc.edu" },
    { name = "Jenu Chacko", email = "jenu.chacko@wisc.edu" }
]
dependencies = [
    "numpy>=1.24.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
    "pycromanager>=0.13.0",
    "pyyaml>=6.0.1",
    "matplotlib>=3.8.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.ruff]
line-length = 100
extend-select = ["C4", "NPY", "PD", "SIM", "TCH"]
ignore = ["E501"]
show-fixes = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=smart_wsi_scanner --cov-report=term-missing"

[project.urls]
"Homepage" = "https://github.com/JenuC/smart-wsi-scanner"
"Bug Tracker" = "https://github.com/JenuC/smart-wsi-scanner/issues"

[tool.flake8]
    exclude = ".venv"
    max-complexity = 10
    max-line-length = 100
    extend-ignore = """
        W503,
        E203,
        E701,
    """

[project.scripts]
get_stageXY = "smart_wsi_scanner.qp_stage:get_stageXY"
get_stageZ = "smart_wsi_scanner.qp_stage:get_stageZ"
move_stageXY = "smart_wsi_scanner.qp_stage:move_stageXY"
move_stageZ = "smart_wsi_scanner.qp_stage:move_stageZ"
get_stageR = "smart_wsi_scanner.qp_stage:get_stageR"
move_stageR = "smart_wsi_scanner.qp_stage:move_stageR"
acquisition_workflow = "smart_wsi_scanner.qp_stage:acquisitionWorkflow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_wsi_scanner"]